--- a/MarkDown/マークダウン記法練習.md
+++ b/MarkDown/マークダウン記法練習.md
@@ -262,3 +262,11 @@ GitHubのMarkdownを利用すると、見出し記法を利用した際に
 <h3><a name="user-content-header1" href="#header1">header1</a></h3>
 <h3><a name="user-content-header2" href="#header2">header2</a></h3>
 ```
+
+---
+
+## 注釈
+
+注釈元テキスト [^注釈id]
+
+[^注釈id]: 注釈先テキストTest
