--- a/Other/自己申告書.md
+++ b/Other/自己申告書.md
@@ -8,8 +8,8 @@
     反省：
     実りある半年だったと思います。およそ業務においてはホウレンソウからGORA連携に至り、満足な成果を上げることが出来たと感じております。
     最適化、効率化については問題なく実現できているので特に書くことがありません。
-    勉強においては、当初の目標である環境系に余り取り組むことが出来ませんでした。本業とは関係ない勉強に傾倒したためです。
-    しかし、個人的にはあまり気にしておりません。勉強しようとする意思は衰えていないからです。
+    勉強においては、当初の目標である環境系に余り取り組むことが出来ませんでした。本業とは関係ない勉強に傾倒したためです(投資関係)。
+    しかし、個人的にはあまり気にしておりません。学習の意思は衰えていないからです。
     TIL等の取り組みも始め、気になる知識は多分にあるので、どんどん吸収していきたい所存でございます。
 
     ■ 資格 :
@@ -45,8 +45,9 @@
 ## 今回_下期見直目標設定
 
     ■ 一次 :
-    ・気になる知識はとにかく吸収する。
-    ・
+    ・気になる知識はとにかく吸収する
+    ・もっと多角的になっていかなければと思う
+    ・身の程をわきまえていく
 
     ■ 資格 :
     余裕があれば応用情報に再挑戦したいと思います。
