--- a/AppliedInformation/3.ハードウェアとコンピュータ構成要素/過去問道場.md
+++ b/AppliedInformation/3.ハードウェアとコンピュータ構成要素/過去問道場.md
@@ -208,23 +208,200 @@ A.サブルーチン呼出し時に，戻り先アドレス，レジスタの内
 
 ---
 
----
+CPUにおける投機実行の説明はどれか。
+平成27年春期　問10
+
+A.分岐命令の分岐先が決まる前に，あらかじめ予測した分岐先の命令の実行を開始する。
+
+投機実行は、分岐判断の結果が出る前に分岐先を予測して命令を先行実行していく方式で、予測の精度が高ければ処理継続ができるので性能向上が期待できます。
+
+- 依存関係にない複数の命令を，プログラム中での出現順序に関係なく実行する。
+  →アウトオブオーダー実行
+- パイプラインの空き時間を利用して2つのスレッドを実行し、あたかも2つのプロセッサであるかのように見せる
+  →同時マルチスレッディング
+- 2つ以上のCPUコアによって複数のスレッドを同時実行する
+  →マルチプロセッサシステム
 
 ---
 
----
+間接アドレス指定方式のアドレス部で指定するものはどれか。
+平成28年秋期　問9
+
+A.処理対象データが格納されている記憶場所のアドレスが格納されている記憶場所のアドレス
+
+コンピューターの命令は、命令部とアドレス部(オペランド)から構成されている。(命令の種類によってはアドレス部がないものもある)
+このうちアドレス部では命令の処理対象となるデータのメモリ上の市場を指定しますが、この指定方法には6種類がある。
+
+1. 直接アドレス指定  
+   アドレス部の値をそのまま有効アドレスとする。  
+2. 間接アドレス指定
+   アドレス部の値で主記憶上のアドレスを指定し、そのアドレスに格納されている値を有効アドレスとする。
+3. 指標(インデックス)アドレス指定
+   アドレス部の値にインデックスレジスタの値を加えたものを有効アドレスとする。
+4. 基底(ベース)アドレス指定
+   アドレス部の値にベースレジスタの値を加えたものを有効アドレスとする。
+5. 相対アドレス指定
+   アドレス部の値にプログラムカウンタの値を加えたものを有効アドレスとする。
+6. 即値アドレス指定
+   アドレス部の値を有効アドレスではなく、そのまま演算対象データとする。
 
 ---
 
----
+並列処理方式であるSIMDの説明として，適切なものはどれか。
+平成28年春期　問9
+
+A.単一命令ストリームで複数のデータストリームを処理する方式
+
+並列処理を実現するプロセッサのアーキテクチャは、同時に実行できる命令数及びデータ数によって以下の4種類に分類されます。
+SISD(Single Instruction Single Data)
+単一の命令で単一のデータを処理する最もシンプルな方式
+SIMD(Single Instruction Multiple Data)
+単一の命令で複数のデータを処理できる方式。pentiumプロセッサで採用されている。
+MISD(Multiple Instruction Single Data)
+複数の命令で単一のデータを扱う方式。理論上は存在するが実装例はない。
+MIMD(Multiple Instruction Multiple Data)
+複数の命令で複数のデータを扱う方式で、複数のプロセッサを搭載した並列コンピュータ環境が該当する。OSやコンパイラがMIMDに対応している必要がある。
 
 ---
 
----
+CPUのパイプライン処理を有効に機能させるプログラミング方法はどれか。ここで，CPUは命令の読込みとデータのアクセスを分離したアーキテクチヤとする。
+平成27年秋期　問8
+
+A.分岐命令を少なくする
+
+パイプライン制御は、CPUで処理される1命令を、命令読出し(フェッチ)、解読(デコード)、アドレス計算、オペランド呼出し、実行　というような複数のステージに分け、各ステージを少しずつずらしながら独立した処理機構で並列に実行することで、処理時間全体を短縮させる技法。
+パイプライン処理では、処理命令を先読みするためプログラム中に分岐命令等があると、結果によって次に実行するべき命令がわからないため、パイプラインを止めて次に実行すべき命令が判明するのを待たなければならない。
+これを**分岐ハザード**と呼ぶ。
+分岐ハザードを発生させないためには、分岐命令を少なくすることが有効な方法。
+
+- CASE文を多くする
+  →逆効果
+- 関数の個数をできるだけ多くする
+  →パイプライン制御の高速化とは関係ない
+- メモリアクセス命令を少なくする
+  →パイプライン制御の高速化とは関係ない。
 
 ---
 
+USB3.0の特徴はどれか。
+平成28年春期　問10
+
+A.四つの転送スピードをもつシリアルインタフェースであり，スーパースピードモードは，PCと外付け磁気ディスクとの接続などに使用される。
+
+USB(Universal Serial Bus)は、現在、最も普及している周辺機器接続のためのインターフェイスです。シリアルバス規格のひとつであり、主な特徴として、ハブを使うことで最大127台まで接続可能、ホットプラグ・プラグアンドプレイに対応、バスパワー方式によってコードを介して電源供給が可能であることなどが挙げられます。
+スーパースピードモードは、USM3.0(2008年11月17日策定)で追加された転送スピードで、USB2.0のハイスピードモード(480Mbps)の10倍以上となる5Gbpsでの転送が可能になっています。また、USBでは接続する機器の動作によって以下の4つの転送モードを使い分けます。
+
+- アイソクロナス転送
+連続的周期的なデータを転送を行う（音声や映像などのデータ転送に適している）
+- バルク転送
+まとまったデータを非周期的に転送する(補助記憶装置やスキャナなどに用いられている)
+- インタラプト転送
+一定間隔でデータを転送する（マウスやキーボードに用いられている）
+- コントロール転送
+デバイスの設定・制御に使われる
+
+ちなみに3.0の次世代規格となるUSB3.1が2013年8月に策定されています。最大転送速度は、さらに増して10Gbpsとなっています。
+
+- PCなどの小型コンピュータと，磁気ディスク，レーザプリンタなどの周辺機器とを接続するパラレルインタフェースである。
+  USBはシリアルインターフェースです。
+- 音声，映像など，リアルタイム性が必要なデータの転送に適した高速な転送方式を採用したシリアルインタフェースであり，FireWireとも呼ばれている。
+  IEEE 1394の特徴です。
+- モデム接続の規格であったが，PCと周辺機器とを接続するようになったシリアルインタフェースである。
+  RS-232Cの特徴です。
+
 ---
+
+液晶ディスプレイ(LCD)の特徴として，適切なものはどれか。
+平成28年春期　問11
+
+A.光の透過を画素ごとに制御し，カラーフィルタを用いて色を表現する。
+
+液晶ディスプレイ(LCD:Liquid Crystal Display)は、外光や、フロントライト、バックライト等の光源により発せられた光を部分的に遮ったり透過させたりすることによって表示を行なうディスプレイです。
+カラーフィルタは色素の吸収を利用して各サブ画素の通過光をR、G、Bの3つの基本色にして、加法混合方式で混色を作り出すことで中間色を含むカラー表示を実現します。
+
+- 電圧を加えると発光する有機化合物を用いる。
+  有機ELディスプレイの説明です。
+- 電子銃から発射された電子ビームが蛍光体に当たって発光する。
+  CRT(ブラウン管)ディスプレイの説明です。
+- 放電によって発生する紫外線と蛍光体を利用する。
+  PDP(プラズマディスプレイパネル)の説明です。
+
+---
+
+キャッシュメモリのライトスルーの説明として，適切なものはどれか。
+平成29年春期　問10
+
+A.キャッシュメモリと主記憶の両方に同時にデータを書き込む。
+
+キャッシュメモリと主記憶の同期をとるための方式として、ライトバックとライトスルーがあります。
+
+- ライトバック(write back)
+  CPUから書き込む命令が出たときにキャッシュメモリだけに書き込み、主記憶への書き込みはキャッシュメモリからデータが追い出されるときに行う方式  
+  速度は向上するがデータの整合性を保つための制御が余分に必要になる
+- ライトスルー(write through)  
+  CPUから書き込む命令が出たときにキャッシュメモリと同時に主記憶にも書き込む方式  
+  データの整合性は得られるが処理速度は低下する  
+  
+- CPUが書込み動作をする時，キャッシュメモリだけにデータを書き込む。
+  キャッシュメモリだけにデータを書き込むのは、ライトバック方式です。
+- 主記憶のデータの変更は，キャッシュメモリから当該データが追い出される時に行う。
+  主記憶のデータの変更において、キャッシュメモリから当該データが追い出される時に行うのは、ライトバック方式です。
+- 主記憶へのアクセス頻度が少ないので，バスの占有率が低い。
+  両者の方式を比較して、主記憶へのアクセス頻度が少ないのは、ライトバック方式です。
+
+---
+
+すべての命令が5サイクルで完了するように設計された，パイプライン制御のコンピュータがある。20命令を実行するのには何サイクル必要となるか。ここで，すべての命令は途中で停止することなく実行でき，パイプラインの各ステージは1サイクルで動作を完了するものとする。
+平成28年秋期　問8
+
+20,21,24,25
+
+パイプライン制御は、CPU処理を高速化させるため、1命令を、命令読出し(フェッチ)、解読(デコード)、アドレス計算、オペランド呼出し、実行 というような複数のステージに分け、各ステージを少しずつずらしながら独立した処理機構で並列に実行することで、処理時間全体を短縮させる技法です。
+
+次の図のように5サイクルはそれぞれ並行して実行されるため、20命令を実行するには24サイクルが必要になります。
+![s](https://www.ap-siken.com/kakomon/28_aki/img/08_1.gif)
+
+またパイプラインの処理時間を求める公式「(I＋D－1)×P」を用いても計算することができます。
+![s](https://www.ap-siken.com/kakomon/28_aki/img/08_2.gif)
+
+命令数(I)が20、深さ(D)が5、ピッチは1サイクルなので、
+　(20＋5－1)×1＝24(サイクル)
+
+---
+
+フラッシュメモリに関する記述として，適切なものはどれか。
+平成28年秋期　問21
+
+A.ブロック単位で電気的に内容の消去ができる。
+
+フラッシュメモリは、電気的に書き換え可能であり、電源を切ってもデータが消えない半導体メモリ です。区分的にはEEPROM(Electrically Erasable Programmable ROM)の一種ですが、1バイト単位の書込みを行う従来のEEPROMとは異なりブロック単位での書き換えを行います。
+
+急激な低価格化の影響もあり、USBメモリやメモリーカードの内部に組み込まれ、携帯電話，デジタルカメラ，デジタルオーディオプレーヤーなどの記憶媒体として広く普及しています。
+
+- 高速に書換えができ，CPUのキャッシュメモリなどに用いられる。
+  SRAM(Static RAM)の説明です。
+- 紫外線で全内容の消去ができる。
+  UV-EPROM(紫外線消去型EEPROM)の説明です。
+- 周期的にデータの再書込みが必要である。
+  DRAM(Dynamic RAM)の説明です。
+
+---
+
+MMU(Memory Management Unit)の説明として，適切なものはどれか。
+平成27年秋期　問10
+
+A.CPUが指定した仮想アドレスを物理アドレスに対応させる。
+
+MMU(Memory Management Unit，メモリ管理機構)は、主記憶を管理するためのハードウェア機構で、アドレス変換機能やメモリ保護機能、キャッシュ制御機能、及びバス調停機能などを持っています。
+
+このうちアドレス変換機能とは、仮想記憶で扱う論理アドレスと実アドレス(物理アドレス)の対応付けを TLB(Translation Lookaside Buffer)で管理し、CPUからのアクセス要求に応じて2つのアドレスを高速に相互変換する機能です。
+
+- CPUからのページフォールトを受けて，物理ページのスワップを行う。
+  MMUはページフォールトをOSに通知する役割を持ちます。
+- OSの一部分であり，キャッシュ制御機能及びバス調整機能を有する。
+  MMUはハードウェア部品のためOSの一部ではありません。
+- 主記憶のデータの一部を保持し，CPUと主記憶の速度差を吸収する。
+  キャッシュメモリの説明です。
 
 ---
 
