残りの分アップ

--- a/AppliedInformation/3.ハードウェアとコンピュータ構成要素/過去問道場.md
+++ b/AppliedInformation/3.ハードウェアとコンピュータ構成要素/過去問道場.md
@@ -527,4 +527,65 @@ xMbyte = 2byte * s / 80 * 10^-6
 器械装置等がアナログ信号をどの程度細かく表現できるかの性能を表すもの。
 
 ---
+
+**16ビットのダウンカウントのカウンタを用い，そのカウンタの値が0になると割込みを発生させるハードウェアタイマがある。カウンタに初期値として10進数の150をセットしてタイマをスタートすると，最初の割込みが発生するまでの時間は何マイクロ秒か。ここで，タイマクロックは16MHzを32分周したものとする。  
+平成29年春期　問22**  
+
+**分周**  
+クロック周波数を1/2^nに下げること。  
+
+16*10^6/32 = 0.5*10^6
+
+「タイマクロックは16MHzを32分周」という記述から、クロック周期数は以下のように求められます。  
+　16MHz÷32＝500kHz  
+この500kHzからダウンカウントの周期は以下のように計算できます。  
+　1秒÷500kHz＝0.000002＝2マイクロ秒  
+カウンタの初期値が150なので、カウンタの値が0になり割込みが発生するまでの時間は、  
+　2マイクロ秒×150＝300マイクロ秒  
+したがって「エ」が正解です。  
+
+---
+
+**図の論理回路の動作の説明として，適切なものはどれか。**
+![s](https://www.ap-siken.com/kakomon/27_aki/img/22.gif)
+
+A＝0，B＝0 のとき，C及びDは前の状態を保持する。  
+A＝0，B＝1 のとき，Bの値を反映して D＝1 になる。  
+A＝1，B＝0 のとき，C＝1，D＝0 になる。  
+A＝1，B＝1 のとき，C及びDは前の状態を保持する。  
+
+NAND型RSフリップフロップと呼ばれ、S(Set:セット)とR(Reset:リセット)の2つの入力を用いることで保持するビットの状態を切り替えることのできるフリップフロップ回路です。
+
+RSフリップフロップには次のような特徴があります。  
+
+- 2つの出力(Q と Q)をもち、この2つのビットは必ず逆になる。
+- S＝1，R＝0の状態にすると回路は常に1を保持する。(Q＝1)
+- S＝0，R＝1の状態にすると回路は常に0を保持する。(Q＝0)
+- 2つの入力が共に1の時が安定状態となる
+
+設問の論理回路に対して入力(0,0)、(1,0)、(0,1)を与えると、以前がどんな状態であったとしても以下のような出力で安定します。  
+![s](https://www.ap-siken.com/kakomon/27_aki/img/22_1.gif)
+
+入力(1,1)の場合だけは特殊で、以前の回路の状態によって次のような動作をします。  
+![s](https://www.ap-siken.com/kakomon/27_aki/img/22_2.gif)
+
+これらをまとめると図の論理回路の真理値表は以下のようになります。  
+![s](https://www.ap-siken.com/kakomon/27_aki/img/22_3.gif)
+
+A＝0，B＝0 のとき，C及びDは前の状態を保持する。  
+A＝0，B＝0 のとき，C＝1，D＝1 になります。しかしこの入力は不定状態へ遷移となるため禁止されています。  
+A＝0，B＝1 のとき，Bの値を反映して D＝1 になる。  
+A＝0，B＝1 のとき，C＝1，D＝0 になります。  
+A＝1，B＝0 のとき，C＝1，D＝0 になる。  
+A＝1，B＝0 のとき，C＝0，D＝1 になります。  
+A＝1，B＝1 のとき，C及びDは前の状態を保持する。  
+正しい。(1,0)→(1,1)、及び(0,1)→(1,1)の遷移では以前の出力が保持されます。  
+
+**順序回路**
+回路の出力がその時点の入力のみならず、過去の入力信号にも依存する回路  
+
+**※不定状態**
+(0,0)→(1,1)の遷移では2つのNAND回路のどちらが先に処理されるかによって、出力が(1,0)又は(0,1)となり定まらない。  
+フリップフロップでは2つの出力(Q, Q)が同値の不定状態へ遷移する入力が禁止されている。  
+
 ---
