会社の技術資料プッシュ＆整理

--- a/JavaScript/...array.md
+++ b/JavaScript/...array.md
@@ -13,3 +13,21 @@ const array2 = [4, ...array]; // [4, 1, 2, 3]
 // スプレッド演算子で関数呼び出し内に配列を展開
 const max = Math.max(...array1); // Math.max(1, 2, 3) と同じ
 ```
+
+
+// 同組、同予約のListを重複無しで合体させ、検索を行う
+this.sameGroupList.
+    concat(this.sameReservationList).
+    filter((x, i, self) => self.indexOf(x) === i).
+    some(list => {
+        // 名前からVisitListのパラメータを取得
+        list.PlayerList.some(player => {
+            if (player.Name === changedName || player.Kana === changedName) {
+                changedPlayer = player;
+                return true;
+            }
+        })
+        if (changedPlayer) {
+            return true;
+        }
+    });
