--- a/BookKeeping/簿記3級/第一回.md
+++ b/BookKeeping/簿記3級/第一回.md
@@ -3,6 +3,8 @@
 簿記(BookKeeping)  
 簿記は帳**簿記**入の略。  
 
+---
+
 ## 会計とは？  
 
 1. 企業の活動(仕入、販売、生産)を帳簿につけること  
@@ -19,10 +21,16 @@
 **勘定科目**  
 表示金額の内容を示す名称のこと。要はカテゴライズ。  
 
+---
+
 ## 5つの概念
 
-資産 負債 純資産  
-費用 収益  
+- 資産
+- 負債
+- 純資産
+- 費用
+- 収益
+
 →  
 資産=負債+純資産  
 費用 収益  
@@ -61,6 +69,8 @@
   - 売上高→売上
   - 手数料収入→受取手数料
   - 配当金収入→受取配当金
+
+---
 
 ## 3つのことを同時に考える
 
@@ -113,6 +123,8 @@
 発生した取引を貸借の勘定科目に分類することである。  
 ※借方と貸方の金額は必ず一致する。  
 
+---
+
 ## 商品売買の仕訳
 
 商品と商品以外の場合で勘定科目が違ってくる。  
@@ -156,24 +168,28 @@ in:現金100 out:売上100
 
 資産のはずの商品と仕入という費用に計上する。
 
-## 決算
+---
 
-いくら設けてどんな状態なのかわからないので、期間を区切ってその期間内での成果をまとめて報告する。  
+## 決算
 
 決算て何をするの？  
 1.仕訳を集計して財務諸表(決算書(B/S,P/L))を作る。  
 2.財務諸表を世間に公開する。  
 
+いくら設けてどんな状態なのかわからないので、期間を区切ってその期間内での成果をまとめて報告する。  
+
 伝票(仕訳) → 記帳 → 帳簿 → 集計 → 損益計算書、貸借対照表  
 
 決算書→簿記では**財務諸表(損益計算書、貸借対照表)**  
 
-- **損益計算書**  
-  資産、負債、純資産  
-  どれくらい資産があるか？ある時点の財政状態(STOCKの情報) BalanceSheet(B/S)  
-- **貸借対照表**  
-  費用、収益  
-  いくら儲かったのか？ある期間の経営成績(FLOWの情報) Profit and Loss Statement(P/L)  
+- **損益計算書(BalanceSheet(B/S)**  
+  どれくらい資産があるか？(資産、負債、純資産)  
+  ある時点の財政状態(STOCKの情報)  
+- **貸借対照表(Profit and Loss Statement(P/L)**  
+  いくら儲かったのか？(費用、収益)  
+  ある期間の経営成績(FLOWの情報)  
+  profit : 利益  
+  statement : 声明  
 
 期中でやる仕訳は**期中仕分**という。  
 決算でしかしない仕訳は**決算整理仕訳**という。  
