--- a/BookKeeping/簿記3級/第1回.md
+++ b/BookKeeping/簿記3級/第1回.md
@@ -1,4 +1,6 @@
-# 第一回簿記
+# 第1回簿記
+
+## 簿記って何？(全体像)  
 
 簿記(BookKeeping)  
 簿記は帳**簿記**入の略。  
@@ -182,10 +184,10 @@ in:現金100 out:売上100
 
 決算書→簿記では**財務諸表(損益計算書、貸借対照表)**  
 
-- **損益計算書(BalanceSheet(B/S)**  
+- **貸借対照表(BalanceSheet(B/S)**  
   どれくらい資産があるか？(資産、負債、純資産)  
   ある時点の財政状態(STOCKの情報)  
-- **貸借対照表(Profit and Loss Statement(P/L)**  
+- **損益計算書(Profit and Loss Statement(P/L)**  
   いくら儲かったのか？(費用、収益)  
   ある期間の経営成績(FLOWの情報)  
   profit : 利益  
