--- a/BookKeeping/簿記3級/第2回.md
+++ b/BookKeeping/簿記3級/第2回.md
@@ -24,9 +24,9 @@
 
 上記2点が会計での「**現金**」扱いとなるもの  
 
-配当金領収書  
+- 配当金領収書  
 
-郵便為替証書  
+- 郵便為替証書  
 封筒に現金を入れて送る方法と現金を郵便為替証書に変えて、それを送る方法がある。  
 これを受け取って郵便局に持っていくと現金に変えることができる。  
 
