--- a/BookKeeping/簿記3級/第1回.md
+++ b/BookKeeping/簿記3級/第1回.md
@@ -94,31 +94,31 @@
 
 1. 100万円の土地を現金で買った  
    →土地という資産の増加。現金という資産の減少  
-   in:土地100万 out:現金100万  
+   かり:土地100万 かし:現金100万  
 2. 電気代10万円を現金で支払った  
    →水道光熱費という費用10万円の発生。現金という資産の減少  
-   in:水道光熱費10万 out:現金10万  
+   かり:水道光熱費10万 かし:現金10万  
 3. 銀行と借金100万円の契約をし、普通預金に入金された  
    →借入金という負債の増加。普通預金という資産の増加。  
-   in:普通預金100万 out:借入金100万  
+   かり:普通預金100万 かし:借入金100万  
 4. 900万円のビルを購入した(明渡済)。代金は現金で支払った。  
    →ビルという建物の増加。現金という資産の減少。  
-   in:建物900万 out:現金900万  
+   かり:建物900万 かし:現金900万  
 5. 900万円のビルを購入した(明渡済)。代金は月末払いとした。  
    →未払金という債務の発生。ビルという建物の増加。  
-   in:建物900万 out:未払金900万  
+   かり:建物900万 かし:未払金900万  
 6. 上記5の未払金900万円を普通預金から支払った。  
    →普通預金という資産の減少。未払金の発生。  
-   in:未払金900万 out:普通預金900万  
+   かり:未払金900万 かし:普通預金900万  
 7. 500万円の土地を購入した(明渡済)。  
    代金の内200万円は現金で支払い、残りの300万円は月末払いとした。  
    →土地という資産の増加。未払金の発生。現金という資産の減少。
-   | in:土地500万 | out:現金200万   |
+   | かり:土地500万 | かし:現金200万   |
    | :----------- | :-------------- |
-   |              | out:未払金200万 |
+   |              | かし:未払金200万 |
 8. 取引先に現金100万円を貸した。  
    →現金という資産の減少。債権という貸付金の増加。  
-   in:貸付金100万 out:現金100万  
+   かり:貸付金100万 かし:現金100万  
 
 **仕訳**
 取引を帳簿に記録すること。  
@@ -140,11 +140,11 @@
 ### 分記法
 
 9月1日、商品1個を80円で現金購入した。  
-in:商品80 out:現金80  
+かり:商品80 かし:現金80  
 
 9月1日、上記商品を100円で現金販売した。  
-in:現金100 out:商品 80  
-__________ out:商品売買益20  
+かり:現金100 かし:商品 80  
+__________ かし:商品売買益20  
 
 商品売買益→収益  
 売価100円を仕入値80円と儲け20円に分けて記入するので分記法という。  
@@ -155,10 +155,10 @@ __________ out:商品売買益20
 こっちがメイン。  
 
 9月1日、商品1個を80円で現金購入した。  
-in:仕入80 out:現金80  
+かり:仕入80 かし:現金80  
 
 9月1日、商品1個を100円で現金購入した。  
-in:現金100 out:売上100  
+かり:現金100 かし:売上100  
 
 商品という資産が増えたにも関わらず仕入という勘定科目にする。  
 仕訳がシンプルになるが、利益がパッと見わかりにくくなる。  
