--- a/BookKeeping/簿記3級/第2回.md
+++ b/BookKeeping/簿記3級/第2回.md
@@ -16,6 +16,8 @@
 2. 現金過不足
 3. 小口現金
 
+---
+
 ### 論点その1 「現金」の範囲
 
 1. リアルの現金(硬貨、紙幣)  
@@ -30,10 +32,12 @@
 封筒に現金を入れて送る方法と現金を郵便為替証書に変えて、それを送る方法がある。  
 これを受け取って郵便局に持っていくと現金に変えることができる。  
 
-#### 問題
+#### 問題1
 
-売掛金2000円の代金として郵便為替証書を受け取った  
+売掛金2000円の代金として郵便為替証書を受け取った。  
 かり:現金2000 かし:売掛金2000  
+
+---
 
 ### 論点その2 現金過不足
 
@@ -73,7 +77,7 @@
 
 差額の原因が不明のままだったらどうするのか？→決算で処理する  
 
-#### 問題
+#### 問題2
 
 金庫内の現金をカウントしてみたら、千円札10枚のみであった。一方、帳簿上の「現金」勘定の残高は9000円であった。  
 
@@ -81,4 +85,44 @@
 
 原因調査したら、先日売掛金1000円を現金で回収したが仕訳していなかった。
 
-かり：現金過不足1000＿かし：売掛金1000
+かり：現金過不足1000＿かし：売掛金1000  
+
+---
+
+### 論点その3 小口現金
+
+日々の細かい支払い(ガス料金の徴収や出張費の建て替え名地)をいちいち仕訳をするのは面倒臭いので、経理部がまとまったお金出す。  
+取り合えずそれでやりくりしてもらって、後で何に使ったかまとめて報告してくださいって仕組みをとっている。  
+その経理部が出すまとまったお金を**小口現金**という。  
+
+経理部(出納係)
+営業事務所(用土係)
+
+1. まとまったお金を用土係に渡しておく
+2. 用土係は日々のちょっとした支払いに渡されたお金を使う
+3. 用土係は何に使ったかを定期的に出納係に報告する
+4. 報告を元に経理部でまとめて仕訳を行う
+5. 減った分の金額を補充する
+
+この仕組みを「**インプレストシステム**」と呼ぶらしい。
+
+ちなみに経理部が管理するのはあくまで「現金」なので、経理部の金庫の中にある現金を差して「小口現金」とは言わない。  
+経理部以外の場所で管理してもらう、まとまった現金を小口現金という。  
+用土係とは経理部以外で小口現金等を管理してくれる的な係見たい。  
+
+#### 問題3
+
+1. 出納係は用土係に10万円を渡した。(月曜の朝)  
+   かり：小口現金10万＿かし：現金10万  
+2. 用土係は日々の支払いを行う。  
+3. 金曜の夕方、用土係は出納係にこの1週間の支払いの領収書を提出した。  
+   ガス代3万円、出張費4万円。  
+4. 出納係は仕訳をする。  
+   かり：水道光熱費3万＿かし：小口現金7万  
+   かり：旅費交通費4万  
+5. 減った小口現金を補充した。(現金で補充)  
+   かり：小口現金7万＿かし：現金7万  
+
+---
+
+あれだな、次からとりあえず全部見てからじっくりメモでもとるか。
