--- a/BookKeeping/簿記3級/第4回.md
+++ b/BookKeeping/簿記3級/第4回.md
@@ -37,6 +37,48 @@ A4:
 
 #### 付随費用(取引の費用、発送費)
 
+Q1  
+A社はB社へ100円の商品を掛け販売した。  
+なおB社は発送費用10円を現金で運送業者に支払った(発送費用はB社負担という契約)。  
+A1  
+A社側  
+かり：売掛金100＿かし：売上100  
+B社側  
+かり：仕入110＿かし：買掛金100  
+＿＿＿＿＿＿＿_かし：現金10  
+**取得するためにかかった費用→取得原価に含める**  
+100円の商品を買うのに10円かかったなら、110円の物を買ったと同じ処理をしましょうというルールがある。  
+
+Q2  
+A社はB社へ100円の商品を掛け販売した。  
+なおA社は発送費用10円を現金で運送業者に支払った(発送費用はB社負担という契約)。  
+A2  
+A社側  
+かり：売掛金110＿かし：売上100  
+＿＿＿＿＿＿＿＿_かし：現金10  
+or  
+かり：売掛金100＿かし：売上100  
+かり：立替金 10＿かし：現金 10  
+※**「立替金」は債権(資産)**。お金を請求する権利がある  
+
+「この10円は費用にはならないはず。債権的な勘定になるはず」という場合最初の回答になる。  
+立替金を売掛金に含めても問題ない。なぜなら売掛金もB社に対する債権だから。  
+
+B社側  
+かり：仕入110＿かし：買掛金110
+→その商品を買うのに100円と10円がかかったわけで、A社への債権があるからそれに含めても意味合いは同じ。  
+
+Q3  
+A社はB社へ100円の商品を掛け販売した。  
+なおA社は発送費用10円を現金で運送業者に支払った(発送費用はA社負担という契約)。  
+A3  
+A社側  
+かり：売掛金100＿かし：売上100  
+かり：発送日 10＿かし：現金 10  
+A社にとっては費用の発生なので、勘定科目を分ける必要がある。  
+B社側  
+かり：仕入100＿かし：買掛金100  
+
 ---
 
 #### 返品(返品する・される)
@@ -54,3 +96,147 @@ A4:
 #### クレジットカードでの販売
 
 ---
+
+#### 練習問題
+
+Q1:
+6,000円の商品を購入し、代金は小切手2,000円を振り出し、残額は月末払いのツケとした。仕訳は？
+
+
+A1:
+仕入6,000　/　当座預金2,000
+　　　　　　　買掛金   4,000
+
+
+Q2:
+商品(仕入値5,000円)を8,000円で販売して、代金は月末払とした。
+①分記法での仕訳は？
+②三分法での仕訳は？
+
+
+A2:
+① 
+売掛金8,000　/　商品           5,000
+　　　          　　 商品売買益3,000
+
+
+② 
+売掛金8,000　/　売上 8,000
+
+
+Q3:
+商品300円を掛けで仕入れた。その際、自己負担の引取手数料として現金10円を払った。仕訳は？
+
+
+A3:
+仕入310　/　買掛金300
+               　　 現金       10
+310円の商品を仕入れたのと同じです。この『ブツを買うためにかかった諸費用は、そのブツの取得原価に含める』という考え方は、今後簿記の勉強ではよく出てきますので覚えておいてください。
+
+
+Q4:
+商品300円を掛けで販売し、その際買主負担の引取運賃20円を現金で支払った。
+①「立替金」を用いる場合の仕訳は？
+②「立替金」を用いない場合の仕訳は？
+
+
+A4:
+① 
+売掛金300　/　売上300
+立替金20　/　現金20
+
+
+② 
+売掛金320　/　売上300
+                   　　 現金   20
+
+
+Q5:
+6月1日、単価100円の商品を10個仕入れた。
+6月8日、単価120円の商品を30個仕入れた。
+6月20日、商品1個を150円で販売した。
+では、6月20日に販売した商品の仕入れ値はいくら？(先入先出法)
+
+
+A5:
+100円
+
+
+Q6:
+6月1日、単価100円の商品を10個仕入れた。
+6月8日、単価120円の商品を30個仕入れた。
+6月20日、商品2個を1個あたり150円で販売した。
+では、6月20日に販売した商品の仕入れ値合計はいくら？(移動平均法)
+
+
+A6:
+230円
+（100円×10個＋120円×30個）÷40個＝115円/個
+@115円×2個＝230円
+問われているのは仕入れ値合計ですので2個分です。ちょっとイジワルしてみました。
+
+
+Q7:
+1万円の商品を販売した（顧客に引き渡した）。なお手付金として前もって1,000円が当座預金に入金されており（記帳済み）、残額は掛けとした。仕訳は？
+
+
+A7:
+売掛金9,000　/　売上10,000
+前受金1,000
+以前手付金が入金されたときに、「貸方前受金」としているはずです。これを消します。
+
+
+Q8:
+オフィス機器を扱う葛飾商店は、パソコンショップである野田商店にパソコンを3台販売した（売価は1台20万円、代金は来月末に支払うこととした）。
+野田商店は当該パソコンを自商店内の事務所で使用するために購入した。
+① 野田商店側の仕訳は？
+② 葛飾商店側の仕訳は？
+
+
+A8:
+①
+備品600,000　/　未払金600,000
+
+
+②
+売掛金600,000　/　売上600,000
+野田商店にとっては備品です。葛飾商店にとっては商品です。
+
+
+Q9:
+9月1日、昨日掛け販売した商品（売価は1個300円、10個販売した）が2個返品された。仕訳は？
+
+
+A9:
+（借）売上600（貸）売掛金600
+
+
+Q10:
+次の連続した取引のＢ商店側の仕訳は？
+×1年2月22日、Ｂ商店がＡ商店へ20,000円の商品をクレジット払いで販売した。信販会社Ｃ社の取扱手数料は販売代金の3%である。なお信販会社Ｃ社への手数料は販売時に計上する。
+×1年2月28日、信販会社Ｃ社からＢ商店へその代金が当座預金へ支払われた。
+×1年3月20日、Ａ商店はＣ社へ20,000円を現金で支払った。
+
+
+A10:
+×1年2月22日
+クレジット売掛金19,400　/　売上20,000
+支払手数料                 600
+
+
+×1年2月28日
+当座預金19,400　/　クレジット売掛金19,400
+
+
+×1年3月20日
+仕訳なし
+無関係です。
+
+Q11:
+商品（売価10,000円）を掛けで販売した。なお売主負担の運送費用300円を現金で支払った。仕訳は？
+
+
+A11:
+（借）売掛金10,000（貸）売上10,000
+（借）発送費300（貸）現金300
+「発送費」は本動画では扱っていませんが、できればこれも知っておいてください。
