--- a/BookKeeping/簿記3級/第4回.md
+++ b/BookKeeping/簿記3級/第4回.md
@@ -74,26 +74,101 @@ A社はB社へ100円の商品を掛け販売した。
 A3  
 A社側  
 かり：売掛金100＿かし：売上100  
-かり：発送日 10＿かし：現金 10  
+かり：発送費 10＿かし：現金 10  
 A社にとっては費用の発生なので、勘定科目を分ける必要がある。  
 B社側  
 かり：仕入100＿かし：買掛金100  
+B社は商品の購入と支払い以外何もないのでこれでよい。  
 
 ---
 
 #### 返品(返品する・される)
 
+**返品は反対仕訳を行えばいいだけ。**  
+
+返品する側  
+5月1日、商品(単価100円)を10個掛けで仕入れた。  
+かり：仕入1000＿かし：買掛金1000  
+5月2日、昨日仕入れた商品のうち、1個が色違いであったため返品した。  
+かり：買掛金100＿かし：仕入100  
+
+返品された側  
+5月1日、商品(単価100円)を10個掛けで販売した。  
+かり：売掛金1000＿かし：売上1000  
+5月2日、昨日販売した商品のうち、1個が色違いであったため返品された。  
+かり：売上100＿かし：売掛金100  
+
 ---
 
 #### 原価・有高の算定
+
+**先入先出法 or 移動平均法**  
+
+5月10日、商品(単価100円)を20個仕入れた。  
+5月16日、商品(単価130円)を10個仕入れた。  
+5月20日、商品を1個販売した(売価200円)。
+→販売した商品の仕入値はいくら？  
+
+100円 or 110円[(100 \* 20 + 130 \* 10) / 30]  
+100円なら**先入先出法**  
+110円なら**移動平均法**  
+どちらも正解。これは問題によって指定される方法による。  
+
+※FIFOがあるなら後に仕入れた商品から先に販売する後入先出法もあるが、これは現在認められていない模様。  
 
 ---
 
 #### 前払金と前受金
 
+売主側の仕訳  
+6月1日、1万円の商品売買の際に、前もって1000円の手付金が現金で支払われた。  
+かり：現金1000＿かし：**前受金1000**  
+×売上1000  
+6月8日、残額が現金で支払われ、商品の引き渡しが行われた。  
+かり：現金9000＿かし：売上10000  
+かり：前受金1000  
+
+**POINT!**  
+**「商品の引き渡し」までは売上・仕入を計上してはいけない。**  
+
+Q:前受金は5つの概念の内どれに当たるか？  
+A:負債(商品をとっておく義務、返金する(かもしれない)義務)  
+
+買主側の仕訳  
+6月1日、1万円の商品売買の際に、前もって1000円の手付金が現金で支払った。  
+かり：前払金1000＿かし：現金1000
+
+6月8日、残額が現金で支払われ、商品の引き渡しが行われた。  
+かり：仕入10000＿かし：現金9000  
+＿＿＿＿＿＿＿＿＿かり：前払金1000  
+
+**前払金は資産**  
+- 商品をとっておいてもらう権利  
+- 返金される(かもしれない)権利  
+
 ---
 
 #### クレジットカードでの販売
+
+```text
+B社 ←←← A社
+ ↓      ↑
+    C社  
+```
+
+売主側の仕訳  
+2月2日、A社はB社に1万円の商品をクレジットカード払いで販売した。  
+なお信販会社の手数料は売価の2%であり、商品販売時に手数料を計上する。  
+かり：クレジット売掛金9800＿かし：売上10000  
+かり：支払手数料 200  
+→売り上げは立ったが、手数料という費用が発生している。  
+
+2月22日、信販会社C社はA社の当座預金口座へ振り込んだ。  
+かり：当座預金9800＿かし：クレジット売掛金9800  
+→振り込まれるのは手数料を引いた値段となる。  
+
+クレカは売主しか関係がない。  
+なので買主側はいつも通り。かり：仕入10000＿かし：クレジット買掛金10000  
 
 ---
 
