--- a/BookKeeping/簿記3級/第2回.md
+++ b/BookKeeping/簿記3級/第2回.md
@@ -81,11 +81,11 @@
 
 金庫内の現金をカウントしてみたら、千円札10枚のみであった。一方、帳簿上の「現金」勘定の残高は9000円であった。  
 
-かり:現金1000__かし:現金過不足1000  
+`かり:現金1000__かし:現金過不足1000`  
 
 原因調査したら、先日売掛金1000円を現金で回収したが仕訳していなかった。
 
-かり：現金過不足1000＿かし：売掛金1000  
+`かり：現金過不足1000＿かし：売掛金1000`  
 
 ---
 
