--- a/BookKeeping/簿記3級/第4回.md
+++ b/BookKeeping/簿記3級/第4回.md
@@ -102,7 +102,7 @@ B社は商品の購入と支払い以外何もないのでこれでよい。
 
 #### 原価・有高の算定
 
-**先入先出法 or 移動平均法**  
+**先入先出法** or **移動平均法**  
 
 5月10日、商品(単価100円)を20個仕入れた。  
 5月16日、商品(単価130円)を10個仕入れた。  
