--- a/BookKeeping/簿記3級/第4回＿商品売買.md
+++ b/BookKeeping/簿記3級/第4回＿商品売買.md
@@ -35,7 +35,7 @@ A4:
 
 ---
 
-#### 付随費用(取引の費用、発送費)
+#### 1.付随費用(取引の費用、発送費)
 
 Q1  
 A社はB社へ100円の商品を掛け販売した。  
@@ -82,7 +82,7 @@ B社は商品の購入と支払い以外何もないのでこれでよい。
 
 ---
 
-#### 返品(返品する・される)
+#### 2.返品(返品する・される)
 
 **返品は反対仕訳を行えばいいだけ。**  
 
@@ -100,7 +100,7 @@ B社は商品の購入と支払い以外何もないのでこれでよい。
 
 ---
 
-#### 原価・有高の算定
+#### 3.原価・有高の算定
 
 **先入先出法** or **移動平均法**  
 
@@ -118,7 +118,7 @@ B社は商品の購入と支払い以外何もないのでこれでよい。
 
 ---
 
-#### 前払金と前受金
+#### 4.前払金と前受金
 
 売主側の仕訳  
 6月1日、1万円の商品売買の際に、前もって1000円の手付金が現金で支払われた。  
@@ -142,13 +142,13 @@ A:負債(商品をとっておく義務、返金する(かもしれない)義務
 かり：仕入10000＿かし：現金9000  
 ＿＿＿＿＿＿＿＿＿かり：前払金1000  
 
-**前払金は資産**  
-- 商品をとっておいてもらう権利  
-- 返金される(かもしれない)権利  
+**前払金**は**資産**  
+・商品をとっておいてもらう権利  
+・返金される(かもしれない)権利  
 
 ---
 
-#### クレジットカードでの販売
+#### 5.クレジットカードでの販売
 
 ```text
 B社 ←←← A社
@@ -174,144 +174,114 @@ B社 ←←← A社
 
 #### 練習問題
 
-Q1:
-6,000円の商品を購入し、代金は小切手2,000円を振り出し、残額は月末払いのツケとした。仕訳は？
+Q1:6,000円の商品を購入し、代金は小切手2,000円を振り出し、残額は月末払いのツケとした。仕訳は？  
+A1:仕入6,000 / 当座預金2,000  
+　　　　　　 / 買掛金 4,000  
 
+Q2:商品(仕入値5,000円)を8,000円で販売して、代金は月末払とした。  
+①分記法での仕訳は？  
+②三分法での仕訳は？  
 
-A1:
-仕入6,000　/　当座預金2,000
-　　　　　　　買掛金   4,000
+_  
 
+A2:  
+①  
+売掛金8,000　/　商品           5,000  
+　　　          　　 商品売買益3,000  
+②  
+売掛金8,000　/　売上 8,000  
 
-Q2:
-商品(仕入値5,000円)を8,000円で販売して、代金は月末払とした。
-①分記法での仕訳は？
-②三分法での仕訳は？
+_  
 
+Q3:商品300円を掛けで仕入れた。その際、自己負担の引取手数料として現金10円を払った。仕訳は？  
+A3:仕入310　/　買掛金300  
+               　　 現金       10  
+310円の商品を仕入れたのと同じです。この『ブツを買うためにかかった諸費用は、そのブツの取得原価に含める』という考え方は、今後簿記の勉強ではよく出てきますので覚えておいてください。  
 
-A2:
-① 
-売掛金8,000　/　商品           5,000
-　　　          　　 商品売買益3,000
+_  
 
+Q4:商品300円を掛けで販売し、その際買主負担の引取運賃20円を現金で支払った。  
+①「立替金」を用いる場合の仕訳は？  
+②「立替金」を用いない場合の仕訳は？  
 
-② 
-売掛金8,000　/　売上 8,000
+A4:  
+①  
+売掛金300　/　売上300  
+立替金20　/　現金20  
 
+②  
+売掛金320　/　売上300  
+                   　　 現金   20  
 
-Q3:
-商品300円を掛けで仕入れた。その際、自己負担の引取手数料として現金10円を払った。仕訳は？
+_  
 
+Q5:  
+6月1日、単価100円の商品を10個仕入れた。  
+6月8日、単価120円の商品を30個仕入れた。  
+6月20日、商品1個を150円で販売した。  
+では、6月20日に販売した商品の仕入れ値はいくら？(先入先出法)  
+A5:100円  
 
-A3:
-仕入310　/　買掛金300
-               　　 現金       10
-310円の商品を仕入れたのと同じです。この『ブツを買うためにかかった諸費用は、そのブツの取得原価に含める』という考え方は、今後簿記の勉強ではよく出てきますので覚えておいてください。
+_  
 
+Q6:  
+6月1日、単価100円の商品を10個仕入れた。  
+6月8日、単価120円の商品を30個仕入れた。  
+6月20日、商品2個を1個あたり150円で販売した。  
+では、6月20日に販売した商品の仕入れ値合計はいくら？(移動平均法)  
 
-Q4:
-商品300円を掛けで販売し、その際買主負担の引取運賃20円を現金で支払った。
-①「立替金」を用いる場合の仕訳は？
-②「立替金」を用いない場合の仕訳は？
+A6:230円  
+（100円×10個＋120円×30個）÷40個＝115円/個  
+@115円×2個＝230円  
+問われているのは仕入れ値合計ですので2個分です。ちょっとイジワルしてみました。  
 
+_  
 
-A4:
-① 
-売掛金300　/　売上300
-立替金20　/　現金20
+Q7:1万円の商品を販売した（顧客に引き渡した）。なお手付金として前もって1,000円が当座預金に入金されており（記帳済み）、残額は掛けとした。仕訳は？  
+A7:  
+売掛金9,000　/　売上10,000  
+前受金1,000  
+以前手付金が入金されたときに、「貸方前受金」としているはずです。これを消します。  
 
+_  
 
-② 
-売掛金320　/　売上300
-                   　　 現金   20
+Q8:  
+オフィス機器を扱う葛飾商店は、パソコンショップである野田商店にパソコンを3台販売した（売価は1台20万円、代金は来月末に支払うこととした）。  
+野田商店は当該パソコンを自商店内の事務所で使用するために購入した。  
+① 野田商店側の仕訳は？  
+② 葛飾商店側の仕訳は？  
+A8:  
+①備品600,000　/　未払金600,000  
+②売掛金600,000　/　売上600,000  
+野田商店にとっては備品です。葛飾商店にとっては商品です。  
 
+_  
 
-Q5:
-6月1日、単価100円の商品を10個仕入れた。
-6月8日、単価120円の商品を30個仕入れた。
-6月20日、商品1個を150円で販売した。
-では、6月20日に販売した商品の仕入れ値はいくら？(先入先出法)
+Q9:9月1日、昨日掛け販売した商品（売価は1個300円、10個販売した）が2個返品された。仕訳は？  
+A9:（借）売上600（貸）売掛金600  
 
+_  
 
-A5:
-100円
+Q10:次の連続した取引のＢ商店側の仕訳は？  
+×1年2月22日、Ｂ商店がＡ商店へ20,000円の商品をクレジット払いで販売した。信販会社Ｃ社の取扱手数料は販売代金の3%である。なお信販会社Ｃ社への手数料は販売時に計上する。  
+×1年2月28日、信販会社Ｃ社からＢ商店へその代金が当座預金へ支払われた。  
+×1年3月20日、Ａ商店はＣ社へ20,000円を現金で支払った。  
+A10:  
+×1年2月22日  
+クレジット売掛金19,400　/　売上20,000  
+支払手数料                 600  
 
+×1年2月28日  
+当座預金19,400　/　クレジット売掛金19,400  
 
-Q6:
-6月1日、単価100円の商品を10個仕入れた。
-6月8日、単価120円の商品を30個仕入れた。
-6月20日、商品2個を1個あたり150円で販売した。
-では、6月20日に販売した商品の仕入れ値合計はいくら？(移動平均法)
+×1年3月20日  
+仕訳なし  
+無関係です。  
 
+_  
 
-A6:
-230円
-（100円×10個＋120円×30個）÷40個＝115円/個
-@115円×2個＝230円
-問われているのは仕入れ値合計ですので2個分です。ちょっとイジワルしてみました。
-
-
-Q7:
-1万円の商品を販売した（顧客に引き渡した）。なお手付金として前もって1,000円が当座預金に入金されており（記帳済み）、残額は掛けとした。仕訳は？
-
-
-A7:
-売掛金9,000　/　売上10,000
-前受金1,000
-以前手付金が入金されたときに、「貸方前受金」としているはずです。これを消します。
-
-
-Q8:
-オフィス機器を扱う葛飾商店は、パソコンショップである野田商店にパソコンを3台販売した（売価は1台20万円、代金は来月末に支払うこととした）。
-野田商店は当該パソコンを自商店内の事務所で使用するために購入した。
-① 野田商店側の仕訳は？
-② 葛飾商店側の仕訳は？
-
-
-A8:
-①
-備品600,000　/　未払金600,000
-
-
-②
-売掛金600,000　/　売上600,000
-野田商店にとっては備品です。葛飾商店にとっては商品です。
-
-
-Q9:
-9月1日、昨日掛け販売した商品（売価は1個300円、10個販売した）が2個返品された。仕訳は？
-
-
-A9:
-（借）売上600（貸）売掛金600
-
-
-Q10:
-次の連続した取引のＢ商店側の仕訳は？
-×1年2月22日、Ｂ商店がＡ商店へ20,000円の商品をクレジット払いで販売した。信販会社Ｃ社の取扱手数料は販売代金の3%である。なお信販会社Ｃ社への手数料は販売時に計上する。
-×1年2月28日、信販会社Ｃ社からＢ商店へその代金が当座預金へ支払われた。
-×1年3月20日、Ａ商店はＣ社へ20,000円を現金で支払った。
-
-
-A10:
-×1年2月22日
-クレジット売掛金19,400　/　売上20,000
-支払手数料                 600
-
-
-×1年2月28日
-当座預金19,400　/　クレジット売掛金19,400
-
-
-×1年3月20日
-仕訳なし
-無関係です。
-
-Q11:
-商品（売価10,000円）を掛けで販売した。なお売主負担の運送費用300円を現金で支払った。仕訳は？
-
-
-A11:
-（借）売掛金10,000（貸）売上10,000
-（借）発送費300（貸）現金300
-「発送費」は本動画では扱っていませんが、できればこれも知っておいてください。
+Q11:商品（売価10,000円）を掛けで販売した。なお売主負担の運送費用300円を現金で支払った。仕訳は？  
+A11:  
+（借）売掛金10,000（貸）売上10,000  
+（借）発送費300（貸）現金300  
+「発送費」は本動画では扱っていませんが、できればこれも知っておいてください。  
