--- a/BookKeeping/簿記3級/第5回＿手形・電子記録債権.md
+++ b/BookKeeping/簿記3級/第5回＿手形・電子記録債権.md
@@ -4,7 +4,7 @@
 
 ---
 
-### 手形取引
+### 1.手形取引
 
 - **約束手形**
   主に2社間での取引で使うもの。簿記3級ではこちらのみ扱う。  
@@ -56,7 +56,7 @@ _
 
 ---
 
-### 電子記録債権
+### 2.電子記録債権
 
 - 電子記録債権
   電子化された売掛金のようなもの  
@@ -146,7 +146,7 @@ _______↑電子記録債務
 
 ---
 
-### 貸付・借入
+### 3.貸付・借入
 
 A社はB社に現金1万円を貸し付けた。  
 
@@ -175,7 +175,7 @@ B社はA社に手形を渡した。
 
 ---
 
-### ありがたい補足
+### 4.ありがたい補足
 
 ・少なくとも日本では、手形は銀行口座（当座預金）を開いている人にしか手形帳（ブランクの手形の束）をくれませんので、約束手形は事実上、当座預金口座を開いている人しか振り出せません。  
 　むか～しむか～しは、手形を受け取った人は、期日になると振り出した人に呈示して「払え！」と請求していた（はず）のですが、現代は相手に呈示するのではなく、銀行に預けます。銀行に預ける（取立依頼する）ことが、相手に呈示したことと同じ行為ということです。
