--- a/BookKeeping/簿記3級/第1回＿簿記とは.md
+++ b/BookKeeping/簿記3級/第1回＿簿記とは.md
@@ -134,10 +134,10 @@
 商品と商品以外の場合で勘定科目が違ってくる。  
 基本的に商品と商品以外のものを分けて考える  
 
-| 商品の売買 |      | 商品以外の売買 |
-| :--------- | :--- | :------------- |
-| 売掛金     | ↔    | 未収入金       |
-| 買掛金     | ↔    | 未払金         |
+| 商品の売買 |＿| 商品以外の売買 |
+| :-------- | :-- | :-------- |
+| 売掛金    | ↔    | 未収入金 |
+| 買掛金    | ↔    | 未払金   |
 
 ### 分記法
 
