--- a/BookKeeping/簿記3級/第2回＿現金.md
+++ b/BookKeeping/簿記3級/第2回＿現金.md
@@ -46,12 +46,12 @@
 実際残高(11,610) < 帳簿上の残高(11,910)  
 →実際の残高に合わせる。よって帳簿上の残高を減らす。  
 
-`かり:現金過不足300 かし:現金300`  
+かり:現金過不足300 かし:現金300  
 
 とりあえず、上記のようにつけて、「現金過不足」勘定(原因を調べる)  
 →切手代300円の記帳(仕訳)を忘れていたことが判明したとする。  
 
-`かり:通信費300 かし:現金過不足300`  
+かり:通信費300 かし:現金過不足300  
 ※切手→通信費  
 
 実際残高(実際有り高)≠帳簿上の残高  
@@ -67,11 +67,11 @@
 帳簿上の現金残高は11,600円である。現金をカウントしてみたら11,610円であった。  
 実際残高(11,610) > 帳簿上の残高(11,600)  
 
-`かり：現金10 かし：現金過不足10`  
+かり：現金10 かし：現金過不足10  
 
 その差額10円は、先日90円の切手を購入した際に誤って100円と仕訳していたことが判明した。  
 
-`かり:現金過不足10 かし:通信費10`  
+かり:現金過不足10 かし:通信費10  
 
 通信費を10円減らす→費用の取消  
 
@@ -81,11 +81,11 @@
 
 金庫内の現金をカウントしてみたら、千円札10枚のみであった。一方、帳簿上の「現金」勘定の残高は9000円であった。  
 
-`かり:現金1000__かし:現金過不足1000`  
+かり:現金1000__かし:現金過不足1000  
 
-原因調査したら、先日売掛金1000円を現金で回収したが仕訳していなかった。
+原因調査したら、先日売掛金1000円を現金で回収したが仕訳していなかった。  
 
-`かり：現金過不足1000＿かし：売掛金1000`  
+かり：現金過不足1000＿かし：売掛金1000  
 
 ---
 
@@ -95,8 +95,8 @@
 取り合えずそれでやりくりしてもらって、後で何に使ったかまとめて報告してくださいって仕組みをとっている。  
 その経理部が出すまとまったお金を**小口現金**という。  
 
-経理部(出納係)
-営業事務所(用土係)
+経理部(出納係)  
+営業事務所(用土係)  
 
 1. まとまったお金を用土係に渡しておく
 2. 用土係は日々のちょっとした支払いに渡されたお金を使う
@@ -104,7 +104,7 @@
 4. 報告を元に経理部でまとめて仕訳を行う
 5. 減った分の金額を補充する
 
-この仕組みを「**インプレストシステム**」と呼ぶらしい。
+この仕組みを「**インプレストシステム**」と呼ぶらしい。  
 
 ちなみに経理部が管理するのはあくまで「現金」なので、経理部の金庫の中にある現金を差して「小口現金」とは言わない。  
 経理部以外の場所で管理してもらう、まとまった現金を小口現金という。  
@@ -122,7 +122,3 @@
    かり：旅費交通費4万  
 5. 減った小口現金を補充した。(現金で補充)  
    かり：小口現金7万＿かし：現金7万  
-
----
-
-あれだな、次からとりあえず全部見てからじっくりメモでもとるか。
