--- a/BookKeeping/簿記3級/第3回＿預金.md
+++ b/BookKeeping/簿記3級/第3回＿預金.md
@@ -64,10 +64,11 @@ Q7参照
 普通預金10,000円を定期預金に振り替えた。その際に手数料として300円が普通預金から差し引かれた。仕訳は？  
 
 ・A1:  
-手数料は費用の発生→支払手数料という勘定科目。  
-普通預金から差し引かれているので、普通預金が減る。1番目のやつにプラスする。  
 かり：定期預金10,000＿かし：普通預金10,300  
 かり：支払手数料300  
+→  
+手数料は費用の発生→支払手数料という勘定科目。  
+普通預金から差し引かれているので、普通預金が減る。1番目のやつにプラスする。  
 
 _  
 
@@ -75,8 +76,9 @@ _
 普通預金に利息2,000円がついた。仕訳は？  
 
 ・A2:  
-利息は収益。勘定科目は受取利息。  
 かり：普通預金2,000＿かし：受取利息2,000  
+→  
+利息は収益。勘定科目は受取利息。  
 
 _  
 
@@ -84,8 +86,9 @@ _
 手元にある4,000円の郵便為替証書を普通預金に預け入れた。仕訳は？  
 
 ・A3:  
-郵便為替証書は現金扱いにできる。なぜなら通貨代用証券だから。  
 かり：普通預金4,000＿かし：現金4,000  
+→
+郵便為替証書は現金扱いにできる。なぜなら通貨代用証券だから。  
 
 _  
 
@@ -97,12 +100,12 @@ _
 ・A4:  
 ①  
 かり：備品50万＿かし：当座預金50万  
-
-→Aからしたら、Bがいつ銀行に行くかわからないので、小切手でのやり取りでは既に減ったもの(銀行に持ち込まれた)とみなして話を進める。  
+→  
+Aからしたら、Bがいつ銀行に行くかわからないので、小切手でのやり取りでは既に減ったもの(銀行に持ち込まれた)とみなして話を進める。  
 
 ②  
-かり：＿かし：  
-→仕訳なし。  
+仕訳なし。  
+→  
 A社では既に終了した体である。  
 
 _  
@@ -115,12 +118,13 @@ _
 ・A5:  
 ①  
 かり：現金50万＿かし：売上50万  
-→商品が売れた→売上が立った。小切手を受け取った→他人振出の小切手は通貨代用証券で現金扱い。  
+→  
+商品が売れた→売上が立った。小切手を受け取った→他人振出の小切手は通貨代用証券で現金扱い。  
 
 ②  
-かり：＿かし：
-→仕訳なし。
-  既に現金として受け取っている。A社もB社もフライング感があるけど、小切手のやり取りはこんな感じになるらしい。  
+仕訳なし。  
+→  
+既に現金として受け取っている。A社もB社もフライング感があるけど、小切手のやり取りはこんな感じになるらしい。  
 
 _  
 
@@ -139,7 +143,8 @@ _
 
 ③  
 かり：当座預金50万＿かし：未収入金50万  
-→小切手を受け取ったので現金としたいところだが違う。  
+→  
+小切手を受け取ったので現金としたいところだが違う。  
 減ると思っていた当座預金が減らなかった。→減ると思っていた処理の取り消しをする。  
 **「減少」の取消**  
 他人振出の小切手を受け取った→「現金」の増加  
@@ -164,7 +169,7 @@ B信用金庫の普通預金500円をA銀行の当座預金に移した。
 なお管理のために預金口座ごとに勘定科目を設定している。仕訳は？  
 
 ・A8:  
-かり：当座預金A銀行500＿かし：普通預金B信用金庫500
+かり：当座預金A銀行500＿かし：普通預金B信用金庫500  
 
 _  
 
@@ -201,14 +206,15 @@ _
 ・A11:  
 ①  
 かり：現金過不足10,000＿かし：現金10,000  
-
-正とするのは常に実残（この場合2万円）です。この数値（2万円）に帳簿上の数値を修正しなければなりません。つまり帳簿上の「現金」勘定残高を1万円減らすわけです。  
+→  
+正とするのは常に実残（この場合2万円）です。  
+この数値（2万円）に帳簿上の数値を修正しなければなりません。つまり帳簿上の「現金」勘定残高を1万円減らすわけです。  
 そして「仕訳する」とは、「帳簿上の残高を動かす」ことを意味します。  
 つまり「現金」勘定を貸方に仕訳する必要があります。  
 そして相手勘定が「現金過不足」で、この場合は借方に現れます。  
 
 ②  
 かり：当座預金10,000＿かし：現金過不足10,000  
-
+→  
 「他人振出しの小切手」だと思っていたために、金城さんは小切手を受け取ったときに「借方現金」と仕訳しました。  
 しかし金城さんがすべき仕訳の借方は「当座預金」のはずです。  
