--- a/BookKeeping/簿記3級/第5回＿手形・電子記録債権.md
+++ b/BookKeeping/簿記3級/第5回＿手形・電子記録債権.md
@@ -73,15 +73,15 @@ _
 買った側  
 
 1月1日、A社は50万円の商品をB社から購入し、代金については掛けとした。
-`かり：仕入50万＿かし：買掛金50万`  
+かり：仕入50万＿かし：買掛金50万  
 
 1月31日、A社はB社に対する買掛金について、電子債権記録期間に**債務発生の記録**を行った。  
 →つまるところ、買掛金という債務を電子的な債務に変更しますという手続きを行ったということ。  
-`かり：買掛金50万＿かし：電子記録債務50万`  
+かり：買掛金50万＿かし：電子記録債務50万  
 →買掛金が電子記録債務になるので、買掛金という負債の減少に相当する。  
 
 5月31日、上記電子記録債務の支払いが行われた。支払いは当座預金口座から行われた  
-`かり：電子記録債務50万＿かし：当座預金50万`  
+かり：電子記録債務50万＿かし：当座預金50万  
 →当座預金から支払い電子記録債務という債務がなくなった。  
 
 _  
@@ -90,15 +90,15 @@ _
 売った側  
 
 1月1日、A社は50万円の商品をB社から購入し、代金については掛けとした。
-`かり：売掛金50万＿かし：売上50万`  
+かり：売掛金50万＿かし：売上50万  
 →売上50万が立ったがまだ支払ってもらっていない。売掛金50万という資産が増えた。  
 
 1月31日、A社はB社に対する買掛金について、電子債権記録期間に**債務発生の記録**を行った。  
-`かり：電子記録債権50万＿かし：売掛金50万`  
+かり：電子記録債権50万＿かし：売掛金50万  
 →売掛金という資産が減って、電子記録債権という資産が増えた  
 
 5月31日、上記電子記録債務の支払いが行われた。支払いは当座預金口座から行われた  
-`かり：当座預金50万＿かし：電子記録債権50万`  
+かり：当座預金50万＿かし：電子記録債権50万  
 →電子記録債権という資産が減って、当座預金という資産が増えた。  
 
 ---
@@ -193,93 +193,81 @@ B社はA社に手形を渡した。
 
 ### 練習問題
 
-Q1:
-手形には「受取手形」と「支払手形」の2種類がある。正しい？
+Q1:  
+手形には「受取手形」と「支払手形」の2種類がある。正しい？  
 
-
-A1:
-×
-手形現物はあくまでも「約束手形」と「為替手形」の2種類です。
-「支払手形」とは手形代金を支払う義務を表す勘定科目ですし、「受取手形」は手形代金を受け取れる権利を表す勘定科目です。
-「受取手形」も「支払手形」も勘定科目であって手形の名前ではありません。
-「支払手形」ではなく「手形支払義務」みたいな勘定科目にすればわかりやすいのに、、、
+A1:  
+×  
+→
+手形現物はあくまでも「約束手形」と「為替手形」の2種類です。  
+「支払手形」とは手形代金を支払う義務を表す勘定科目ですし、「受取手形」は手形代金を受け取れる権利を表す勘定科目です。  
+「受取手形」も「支払手形」も勘定科目であって手形の名前ではありません。  
+「支払手形」ではなく「手形支払義務」みたいな勘定科目にすればわかりやすいのに、、、  
 
 ちなみに令和元年よりも前は、手形といえば「手形の裏書」と「手形の割引」という一番重要な論点があったのですが、令和元年の学習内容の大改定により2級以降で学習することになりました。
 もっというと、平成28年よりも前は、為替手形も3級で学習しました。つまり3級で「為替手形」も学習するうえに「手形の裏書」「手形の割引」も学習していたので、初学者にはとてもとても負担でした。そのため現状の3級ではとても簡単なものとなりました。
 
+_  
 
-Q2:
-次の①～③の連続した取引についてA社側の仕訳は？
-①A社は、B社から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出してB社に渡した。
-②B社は手形を銀行に預けた。
-③手形の決済期日になり無事決済となり、B社の当座預金口座に手形代金が入金された。
+Q2:  
+次の①～③の連続した取引についてA社側の仕訳は？  
+①A社は、B社から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出してB社に渡した。  
+②B社は手形を銀行に預けた。  
+③手形の決済期日になり無事決済となり、B社の当座預金口座に手形代金が入金された。  
 
+A2:  
+①仕入7,000 / 支払手形7,000  
+②仕訳なし  
+③支払手形7,000 / 当座預金7,000  
 
-A2:
-①仕入7,000  / 支払手形7,000
+_  
 
+Q3:  
+次の①～③の連続した取引についてB社側の仕訳は？  
+①A社は、B社から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出してB社に渡した。  
+②B社は手形を銀行に預けた。  
+③手形の決済期日になり無事決済となり、B社の当座預金口座に手形代金が入金された。  
 
-②仕訳なし
+A3:  
+①受取手形7,000 / 売上7,000  
+②仕訳なし  
+③当座預金7,000 / 受取手形7,000  
 
+_  
 
-③支払手形7,000 /  当座預金7,000
+Q4:  
+日比谷商店は内幸町商店から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出して内幸町商店に渡した。  
+なお日比谷商店**負担**の引取運賃300円は日比谷商店が現金で支払った。日比谷商店側の仕訳は？  
 
-
-Q3:
-次の①～③の連続した取引についてB社側の仕訳は？
-①A社は、B社から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出してB社に渡した。
-②B社は手形を銀行に預けた。
-③手形の決済期日になり無事決済となり、B社の当座預金口座に手形代金が入金された。
-
-
-A3:
-①受取手形7,000 / 売上7,000
-
-
-②仕訳なし
-
-
-③当座預金7,000 / 受取手形7,000
-
-
-Q4:
-日比谷商店は内幸町商店から商品7,000円を仕入れた。代金は手形(期日は90日後)を振り出して内幸町商店に渡した。
-なお日比谷商店負担の引取運賃300円は日比谷商店が現金で支払った。日比谷商店側の仕訳は？
-
-
-A4:
+A4:  
 仕入7,300 / 支払手形7,000
-  　　　　    現金           300
+　　　　 / 現金　　　300
 
+_  
 
-Q5:
-諏訪商店が山口商店から現金１万円を借りて、その借用の証拠として手形を山口商店に渡した。諏訪商店側の仕訳は？
+Q5:  
+諏訪商店が山口商店から現金１万円を借りて、その借用の証拠として手形を山口商店に渡した。諏訪商店側の仕訳は？  
 
+A5:  
+現金10,000 / 手形借入金10,000  
 
-A5:
-現金10,000 / 手形借入金10,000
+_  
 
+Q6:  
+諏訪商店が山口商店から現金１万円を借りて、その借用の証拠として手形を山口商店に渡した。山口商店側の仕訳は？  
 
-Q6:
-諏訪商店が山口商店から現金１万円を借りて、その借用の証拠として手形を山口商店に渡した。山口商店側の仕訳は？
+A6:  
+手形貸付金10,000 / 現金10,000  
 
+_  
 
-A6:
-手形貸付金10,000 / 現金10,000
+Q7:  
+9月20日、A社はB社に対して、商品600円を掛けで販売した。  
+10月31日、B社はA社に対する買掛金について、電子債権記録機関に債務発生の記録を行った。  
+2月29日、当該電子記録債務の支払いが行われた（B社の当座預金からA社の当座預金に資金が振り替えられた）。  
+A社側の仕訳は？  
 
-
-Q7:
-9月20日、A社はB社に対して、商品600円を掛けで販売した。
-10月31日、B社はA社に対する買掛金について、電子債権記録機関に債務発生の記録を行った。
-2月29日、当該電子記録債務の支払いが行われた（B社の当座預金からA社の当座預金に資金が振り替えられた）。
-A社側の仕訳は？
-
-
-A7:
-9月20日 売掛金600 / 売上600
-
-
-10月31日 電子記録債権600 / 売掛金600
-
-
-2月29日 当座預金600 / 電子記録債権600
+A7:  
+9月20日 売掛金600 / 売上600  
+10月31日 電子記録債権600 / 売掛金600  
+2月29日 当座預金600 / 電子記録債権600  
