--- a/MarkDown/マークダウン記法練習.md
+++ b/MarkDown/マークダウン記法練習.md
@@ -36,6 +36,18 @@
 
 ---
 
+## 空白（スペース）の挿入
+
+通常、空白を挿入する際は「スペース」を入力しますが、MarkDownでは4種類の空白があります。  
+
+空白なしの行
+&thinsp;&nbsp;より狭い空白
+&nbsp;半角スペースと同じサイズの空白
+&ensp;半角スペースより少し広めの空白
+&emsp;半角スペースよりさらに広めの空白　全角スペースとほぼ同じ幅
+
+---
+
 ## 番号付きリスト
 
 1. 番号付きリスト
