--- a/BookKeeping/簿記3級/第4回＿商品売買.md
+++ b/BookKeeping/簿記3級/第4回＿商品売買.md
@@ -174,15 +174,19 @@ B社 ←←← A社
 
 #### 練習問題
 
-Q1:6,000円の商品を購入し、代金は小切手2,000円を振り出し、残額は月末払いのツケとした。仕訳は？  
-A1:仕入6,000 / 当座預金2,000  
-　　　　　　 / 買掛金 4,000  
+Q1:  
+6,000円の商品を購入し、代金は小切手2,000円を振り出し、残額は月末払いのツケとした。仕訳は？  
 
-Q2:商品(仕入値5,000円)を8,000円で販売して、代金は月末払とした。  
-①分記法での仕訳は？  
-②三分法での仕訳は？  
+A1:  
+仕入6,000 / 当座預金2,000  
+　　　　 / 買掛金 4,000  
 
 _  
+
+Q2:  
+商品(仕入値5,000円)を8,000円で販売して、代金は月末払とした。  
+①分記法での仕訳は？  
+②三分法での仕訳は？  
 
 A2:  
 ①  
@@ -193,14 +197,18 @@ A2:
 
 _  
 
-Q3:商品300円を掛けで仕入れた。その際、自己負担の引取手数料として現金10円を払った。仕訳は？  
-A3:仕入310　/　買掛金300  
-               　　 現金       10  
+Q3:  
+商品300円を掛けで仕入れた。その際、自己負担の引取手数料として現金10円を払った。仕訳は？  
+
+A3:  
+仕入310 / 買掛金300  
+　　　　/ 現金10  
 310円の商品を仕入れたのと同じです。この『ブツを買うためにかかった諸費用は、そのブツの取得原価に含める』という考え方は、今後簿記の勉強ではよく出てきますので覚えておいてください。  
 
 _  
 
-Q4:商品300円を掛けで販売し、その際買主負担の引取運賃20円を現金で支払った。  
+Q4:  
+商品300円を掛けで販売し、その際買主負担の引取運賃20円を現金で支払った。  
 ①「立替金」を用いる場合の仕訳は？  
 ②「立替金」を用いない場合の仕訳は？  
 
