--- a/BookKeeping/簿記3級/第7回＿純資産.md
+++ b/BookKeeping/簿記3級/第7回＿純資産.md
@@ -174,6 +174,7 @@ _
 
 Q1:  
 株式会社は『①』を発行する。『①』を買い取った者は『②』という法的立場を獲得する。  
+
 A1:  
 ①株式  
 ②株主  
@@ -181,36 +182,56 @@ A1:
 
 _  
 
-Q2:会社設立に際し、株式10,000株を1株1,000円で発行し、投資家から当座預金に入金された。仕訳は？  
-A2:当座預金10,000,000 / 資本金10,000,000  
+Q2:  
+会社設立に際し、株式10,000株を1株1,000円で発行し、投資家から当座預金に入金された。仕訳は？  
+
+A2:  
+当座預金10,000,000 / 資本金10,000,000  
 
 _  
 
-Q3:会社設立後8年目に、あらたに株式を10,000株発行し（1株1,000円）、既存株主に買い取ってもらい、当座預金に入金された。仕訳は？  
-A3:当座預金10,000,000 / 資本金10,000,000  
+Q3:  
+会社設立後8年目に、あらたに株式を10,000株発行し（1株1,000円）、既存株主に買い取ってもらい、当座預金に入金された。仕訳は？  
+
+A3:  
+当座預金10,000,000 / 資本金10,000,000  
 増資です。  
 
 _  
 
-Q4:会社法の規程に従い、繰越利益剰余金1,000,000円を利益準備金にした。仕訳は？  
-A4:繰越利益剰余金1,000,000 / 利益準備金1,000,000  
+Q4:  
+会社法の規程に従い、繰越利益剰余金1,000,000円を利益準備金にした。仕訳は？  
+
+A4:  
+繰越利益剰余金1,000,000 / 利益準備金1,000,000  
 
 _  
 
-Q5:当期1年間での収益は、「売上」が1,000円、「受取手数料」が100円のみであり、費用は、「給料」が800円、「支払利息」が200円のみであった。収益の勘定科目と費用の勘定科目を「損益」勘定に振り替える仕訳は？  
-A5:
-売上1,000____ / 損益1,100  
-受取手数料100 /
+Q5:  
+当期1年間での収益は、「売上」が1,000円、「受取手数料」が100円のみであり、費用は、「給料」が800円、「支払利息」が200円のみであった。収益の勘定科目と費用の勘定科目を「損益」勘定に振り替える仕訳は？  
+
+A5:  
+①  
+売上1,000　　 / 損益1,100  
+受取手数料100 /  
+②  
 損益1,000 / 給料800  
-________ / 支払利息200  
+　　　　　/ 支払利息200  
 
 _  
 
-Q6:上記Q5において、「損益」を振り替える仕訳は？  
-A6:損益100 / 繰越利益剰余金100  
+Q6:  
+上記Q5において、「損益」を振り替える仕訳は？  
+
+A6:  
+損益100 / 繰越利益剰余金100  
 
 _  
 
-Q7:横浜商店は個人商店で経営されている。この商店には、会社法の規程により代表取締役社長がいる？  
-A7:いない  
+Q7:  
+横浜商店は個人商店で経営されている。この商店には、会社法の規程により代表取締役社長がいる？  
+
+A7:
+いない  
+→
 会社法は会社に対して取締役などの役員を置くことを要請していますが、個人商店には要請していません。というか、個人商店の運営には会社法は関係ありません。  
