--- a/BookKeeping/簿記3級/第10回＿決算整理仕訳2-3.md
+++ b/BookKeeping/簿記3級/第10回＿決算整理仕訳2-3.md
@@ -20,6 +20,191 @@
 
 ---
 
+#### 減価償却
+
+##### 固定資産って？
+
+長期間使用する資産  
+(例)土地、建物、備品、機械装置  
+
+・経費処理する(消耗品費など)  
+→費用が大きくなる  
+・固定資産にする  
+→費用にならない？  
+→なる！「**減価償却**」で費用にしていく!  
+
+_  
+
+###### 例題
+
+○1年4月1日、50万円のパソコンを現金で購入した。  
+備品500,000 / 現金500,000  
+→
+帳簿上の価値を「**簿価**」という。
+この例では備品が簿価に当たる。
+
+「5年使用したとしたら、5年後の価値は0円」と見積もった。  
+○2年3月31日が終了し決算になった。  
+減価償却費100,000 / 備品100,000  
+→  
+これで備品は帳簿上40万円になった。  
+相手勘定は**減価償却費**という**費用**。  
+
+○3年3月31日が終了し決算になった。  
+減価償却費100,000 / 備品100,000  
+→  
+これで備品は帳簿上30万円になった。  
+
+ざっくり言えば、5年かけて簿価の価値を減らしていく作業が減価償却ということになる。  
+
+![減価償却](/BookKeeping\簿記3級\画像置き場\10_減価償却.png)  
+
+直線的に簿価が下がるのが**定額法**  
+カーブを描いて下がるのが**定率法**  
+何年使う？→**耐用年数**  
+耐用年数経過後の見積もった価格→**残存価格**  
+
+**直接法**  
+減価償却費100,000 / 備品100,000  
+
+**間接法**  
+減価償却費100,000 / 備品減価償却累計額100,000  
+→  
+・**○○減価償却累計額**という書き方をする。  
+・簿記3級では間接法がメインになる。後、一般的  
+・備品減価償却累計額は**マイナスの資産である。**  
+
+備品500,000 / 現金500,000  
+減価償却費100,000 / 備品減価償却累計額100,000  
+とした場合、簿価である50万から備品減価償却累計額10万を引いて現在の簿価は40万であるという見方をする。  
+
+---
+
+##### 固定資産の減価償却
+
+Q:  
+○1年4月1日、50万円のパソコンを現金で購入した。  
+A:  
+備品500,000 / 現金500,000  
+
+Q:  
+「5年使用したとしたら、5年後の価値は**5万円**」と見積もった。  
+○2年3月31日が終了し決算になった。  
+A:  
+減価償却費90,000 / 備品減価償却累計額90,000  
+
+○3年3月31日が終了し決算になった。  
+減価償却費90,000 / 備品減価償却累計額90,000  
+
+![減価償却2](/BookKeeping\簿記3級\画像置き場\10_減価償却2.png)  
+
+###### 練習問題
+
+○1年4月1日、130万円の建物を掛けで購入した。  
+建物1,300,000 / 未払金1,300,000  
+→  
+「耐用年数10年」「残存価格10万円」  
+
+○2年3月31日が終了し、決算になった。  
+→  
+130-10=120,120/10=12  
+減価償却費120,000 / 建物減価償却累計額120,000  
+
+Q:  
+○3年3月31日が終了し、決算になった。  
+
+A:  
+減価償却費120,000/建物減価償却累計額120,000  
+→  
+130-12-12=106  
+この地点で簿価は106万円。  
+
+Q:  
+○3年4月1日、上記建物を110万円で売却した(掛け)。  
+→  
+**固定資産を売ったらどうなるのか**という論点。  
+
+A:  
+減価償却累計額240,000 / 建物1,300,000  
+未収入金1,100,000 / 固定資産売却益40,000  
+→
+建物という資産を売って(なくなった)、今までつけていた**マイナスの資産**(**減価償却累計額**)と交換する。  
+簿価106万に対して110万で売ったので、利益4万は**固定資産売却益**(普通に考えれば収益)という勘定科目をつける。  
+
+因みに直接法の場合以下のように書く。  
+________________/ **建物1,060,000**  
+未収入金1,100,000 / 固定資産売却益40,000  
+
+---
+---
+
+#### 貸倒の処理
+
+・貸したお金は必ず帰ってくる？  
+・ツケ代金は必ず回収できる？  
+→NO(倒産、夜逃げ等)  
+・貸したお金が帰ってこない。  
+・ツケ代金が回収できない。  
+→**貸倒**という。  
+
+過去の経験等から「3％くらいは貸し倒れる」と予測したとする。  
+→これは決算において仕訳する。  
+**貸倒引当金の設定**という決算整理仕訳  
+
+**貸倒引当金**の前に**貸倒**の処理をする。  
+
+貸倒の処理  
+Q:  
+○2年2月12日、A社に2,000円の商品を掛販売した。  
+A:  
+売掛金2,000 / 売上2,000  
+→
+売掛金とは売上として計上しているけれども未回収である状態の代金を指します。  
+売掛金は代金を後で受け取る権利がある「**売上債権**」のため、貸借対照表の**資産**に計上されます。
+売上は純粋に収益。
+例えば取引先に毎月50万円の売上があって翌月末に入金されるのであれば、仮に2月末に50万円の売上が発生した場合、その50万円は3月末に入金予定となります。  
+このような場合、2月末の時点では売掛金50万円/売上高50万円という形で処理をします。  
+
+Q:  
+○2年2月20日、A社が倒産し、上記売掛金が貸し倒れとなった。  
+A:  
+貸倒損失2,000 / 売掛金2,000  
+→  
+売掛金という資産がなくなった。**貸倒損失**という**費用**が発生した(損した)。  
+
+##### 貸倒引当金
+
+Q:  
+○2年3月31日(期末日)が終了し、初めての決算で売掛金の残高は100万円である。  
+このうち3%は回収できないと見積もられた。  
+A:  
+貸倒引当金繰入30,000 / 貸倒引当金30,000  
+→
+**貸倒引当金**:マイナスの資産  
+**貸倒引当金繰入**:費用  
+期末時点の債権(売掛金、未収入金、貸付金等)を今のうちに**費用**(**貸倒引当金繰入**)に計上してしまう。  
+でもって、今のうちに**資産**(**貸倒引当金**)を減額するってこと。  
+→  
+これを**貸倒引当金**の設定という  
+→  
+これは事実上3%は回収できないという事態が発生しているからこういう仕訳をしている。  
+**発生主義**だからこの仕訳が必要。  
+
+_  
+
+Q:  
+○3年3月31日(期末日)が終了し決算となった。  
+この時点で売掛金の残高は200万円である。  
+このうち3%は回収できないと見積もられた。  
+**なお貸倒引当金の残高は5万円である**。  
+→  
+これが2年目以降の論点  
+
+A:  
+/
+
+
+
 ---
 
 #### 練習問題
