--- a/BookKeeping/簿記3級/第10回＿決算整理仕訳2-3.md
+++ b/BookKeeping/簿記3級/第10回＿決算整理仕訳2-3.md
@@ -20,7 +20,7 @@
 
 ---
 
-#### 減価償却
+#### 減価償却 第1部
 
 ##### 固定資産って？
 
@@ -39,7 +39,7 @@ _
 
 ○1年4月1日、50万円のパソコンを現金で購入した。  
 備品500,000 / 現金500,000  
-→
+→  
 帳簿上の価値を「**簿価**」という。
 この例では備品が簿価に当たる。
 
@@ -127,13 +127,53 @@ Q:
 A:  
 減価償却累計額240,000 / 建物1,300,000  
 未収入金1,100,000 / 固定資産売却益40,000  
-→
+→  
 建物という資産を売って(なくなった)、今までつけていた**マイナスの資産**(**減価償却累計額**)と交換する。  
 簿価106万に対して110万で売ったので、利益4万は**固定資産売却益**(普通に考えれば収益)という勘定科目をつける。  
 
 因みに直接法の場合以下のように書く。  
 ________________/ **建物1,060,000**  
 未収入金1,100,000 / 固定資産売却益40,000  
+
+---
+
+#### 減価償却 第2部
+
+Q:  
+○2年1月1日、130万円の建物を掛けで購入した。  
+A:  
+建物1,300,0000 / 未払金 1,300,000  
+耐用年数10年,残存価格10万円  
+
+Q:  
+○2年3月31日が終了し、決算になった。  
+A:  
+減価償却費30,000 / 減価償却累計額 30,000  
+→
+1月から3月までの3か月分を計上する。
+
+Q:  
+○3年3月31日が終了し、決算になった。  
+A:  
+減価償却費120,000 / 減価償却累計額120,000  
+→
+この地点での簿価は130-15=115万  
+
+Q:  
+○3年5月31日、上記建物を110万円で売却した(掛け)。  
+A:  
+減価償却累計額150,000 / 建物1,300,000  
+減価償却______20,000 /  
+未収入金____1,100,000 /  
+**固定資産売却損**_30,000 /  
+→  
+前回3月31日から5月31日は2か月が経過しているので2か月分の減価償却を行う。
+1月1万だから1,300,000-150,000+20,000
+2か月分の減価償却もしたうえで売ろうよ。  
+2か月分の減価償却は累計額には含めずに費用の発生とするため、仕訳は分ける。  
+計算すると3万円の損なので**固定資産売却損**という**費用**(**特別損失**)に計上する。  
+
+以上が**期中取得**と**期中売却**の例題  
 
 ---
 ---
@@ -158,7 +198,7 @@ Q:
 ○2年2月12日、A社に2,000円の商品を掛販売した。  
 A:  
 売掛金2,000 / 売上2,000  
-→
+→  
 売掛金とは売上として計上しているけれども未回収である状態の代金を指します。  
 売掛金は代金を後で受け取る権利がある「**売上債権**」のため、貸借対照表の**資産**に計上されます。
 売上は純粋に収益。
@@ -172,14 +212,16 @@ A:
 →  
 売掛金という資産がなくなった。**貸倒損失**という**費用**が発生した(損した)。  
 
-##### 貸倒引当金
+---
+
+##### 貸倒引当金 第一部
 
 Q:  
 ○2年3月31日(期末日)が終了し、初めての決算で売掛金の残高は100万円である。  
 このうち3%は回収できないと見積もられた。  
 A:  
 貸倒引当金繰入30,000 / 貸倒引当金30,000  
-→
+→  
 **貸倒引当金**:マイナスの資産  
 **貸倒引当金繰入**:費用  
 期末時点の債権(売掛金、未収入金、貸付金等)を今のうちに**費用**(**貸倒引当金繰入**)に計上してしまう。  
@@ -199,11 +241,141 @@ Q:
 **なお貸倒引当金の残高は5万円である**。  
 →  
 これが2年目以降の論点  
+6万円は貸し倒れる,と予測。
+設定したい貸倒引当金は6万。準備している貸倒引当金は5万。  
 
 A:  
-/
+貸倒引当金繰入 10,000 / 貸倒引当金10,000  
+→  
+こうすることで準備している5万に1万を追加することになる。  
+設定したい金額である6万円にすることができた。  
+差額を補充する方法  
 
+では8万の場合は？ってなってくるが、それは第2部でやる。  
 
+_  
+
+Q:  
+○2年3月31日(期末日)が終了し、初めての決算で売掛金の残高は100万円である。  
+このうち3%は回収できないと見積もられた。  
+A:  
+貸倒引当金繰入30,000 / 貸倒引当金30,000  
+
+Q:  
+○2年4月10日、得意先A社が倒産しA社に対する売掛金が回収不能となった。  
+なおA社に対する売掛金は5,000円であり、上記100万円に含まれている。  
+A:  
+**貸倒引当金**5,000 / 売掛金5,000  
+→  
+貸倒損失5,000 / 売掛金5,000としたいところだが、そうじゃない。  
+貸倒損失は費用計上。貸し倒れることを予想して貸倒引当金繰入という費用を計上している。  
+また費用を計上するのか？  
+そんなことはない。  
+もう費用計上しませんよ。前期末に費用を計上している。  
+予想した通り、本当に貸し倒れたね。じゃあ備えて置いた引当金を持ってくるよ。  
+
+---
+
+#### 貸倒引当金 第2部
+
+Q:  
+○2年3月31日(期末日)が終了し、初めての決算で売掛金の残高は100万である。  
+このうち3%は回収できないと見積もられた。  
+A:  
+貸倒引当金繰入30,000 / 貸倒引当金30,000  
+
+Q:  
+○2年4月10日、得意先A社が倒産し、A社に対する売掛金が回収不能となった。  
+なおA社に対する売掛金は8,000円であり、内3,000は昨日販売した分、5,000は上記100万円に含まれている。  
+A:  
+貸倒引当金5,000 / 売掛金8,000  
+貸倒損失3,000 /  
+→
+貸倒引当金8,000 / 売掛金8,000としたいところだが、そうじゃない。  
+貸倒引当金30,000は3月31日に含まれていた売掛金に対する物。  
+ポイントは前期末に発生したのか当期に発生したのかということ。  
+
+_  
+
+Q:  
+○2年3月31日(期末日)が終了し、初めての決算で売掛金の残高は100万である。  
+このうち3%は回収できないと見積もられた。  
+A:  
+貸倒引当金繰入30,000 / 貸倒引当金30,000  
+
+Q:  
+○2年4月10日、得意先A社が倒産し、A社に対する売掛金が回収不能となった。  
+なおA社に対する売掛金は5万円であり、全額100万円に含まれている。  
+A:  
+貸倒引当金30,000 / 売掛金50,000  
+貸倒損失20,000 /  
+→  
+3万しかないけど実際に5万も吹っ飛んだ。  
+**2万円足りない場合はどうするか**という論点。
+→  
+**超えた分はもう当期の費用にするしかない**。
+
+_  
+
+ようやく8万の話に戻ってくる。  
+
+Q:  
+○3年3月31日(期末日)が終了し決算となった。  
+この時点で売掛金の残高は200万円である。  
+このうち3%は回収できないと見積もられた。  
+**なお貸倒引当金の残高は8万円である**。  
+
+A:  
+貸倒引当金20,000 / **貸倒引当金戻入**20,000  
+→  
+6万円でいいはずだけど8万円も残ってしまっている。  
+やっぱり6万円に合わせる必要がある。  
+貸方は収益の勘定科目である**貸倒引当金戻入**を使う。  
+→  
+マイナスの資産の減少と収益の発生  
+
+_  
+
+##### 貸倒処理した債権が後日回収できた場合
+
+Q:  
+○2年3月1日、A社に500円の商品をかけ販売した。  
+A:  
+売掛金500 / 売上500  
+
+Q:  
+○2年3月10日、上記A社が倒産した。
+A:  
+貸倒損失500 / 売掛金500  
+→  
+資産の減少と費用の発生  
+
+Q:  
+○2年3月20日,A社から500円現金で回収した。  
+A:  
+現金500 / 貸倒損失500  
+→
+貸倒損失という費用の取消  
+
+_  
+
+**決算をまたいだ場合どうなるか**？という論点。  
+
+Q:  
+○2年4月1日,A社から500円現金で回収した。  
+A:  
+現金500 / **償却債権取立益**500  
+→
+取消の反対仕訳は当期中ならいいが、期をまたいだ場合はダメ。  
+となれば、今期の収益と見込めるわけなので**償却債権取立益**という勘定科目を使う。  
+
+---
+
+#### 補足1 月次決算
+
+---
+
+#### 補足2 耐用年数とか残存価格とは結局なんなのか
 
 ---
 
